Worked on Instant Skin Update for BungeeCord
Added Instant Skin updating for Bungeecord using external module. I will
upload the module too.

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,8 +1,9 @@
 name: SkinsRestorer
 main: skinsrestorer.bukkit.SkinsRestorer
-version: 10.5
+version: 10.5.5
 author: Th3Tr0LLeR
 load: startup
+softdepend: [AutoIn]
 commands:
   skinsrestorer:
     aliases: [sr]
