Added option to disable the /skin command.
I also added an configurable Unknown command if you want to use it. :)

--- a/config.yml
+++ b/config.yml
@@ -41,3 +41,7 @@ MySQL:
   Table: Skins
   Username: root
   Password: pass
+
+#Turn this to true if you want to disable
+#The /skin command.
+Disable Skin Command: false
