--- a/messages.yml
+++ b/messages.yml
@@ -32,3 +32,4 @@ Messages:
   - &9/skinsrestorer update <player> &9-&a Updates player skin data.
   - &9/skinsrestorer set <player> <skin name> &9-&a Sets Player's skin.
   - &9/skinsrestorer info &9- &aShows some info.
+  - &9/skinsrestorer debug &9- &aCreates a debug.txt file for reporting issues
