--- a/bungee.yml
+++ b/bungee.yml
@@ -1,4 +1,4 @@
 name: SkinsRestorer
 main: skinsrestorer.bungee.SkinsRestorer
-version: 11.6.1
-author: Th3Tr0LLeR
+version: 11.7
+author: Th3Tr0LLeR,Blackfire62
