--- a/bungee.yml
+++ b/bungee.yml
@@ -1,4 +1,4 @@
 name: SkinsRestorer
 main: skinsrestorer.bungee.SkinsRestorer
-version: 11.8.3
+version: 11.8.4 (Blackfire62's fork)
 author: Th3Tr0LLeR,Blackfire62
