--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: SkinsRestorer
 main: skinsrestorer.bukkit.SkinsRestorer
-version: 11.8.3
+version: 11.8.4 (Blackfire62's fork)
 author: Th3Tr0LLeR,Blackfire62
 load: STARTUP
 softdepend: [AutoIn]
