Reordering api requests + bugfixes

--- a/bungee.yml
+++ b/bungee.yml
@@ -1,4 +1,4 @@
 name: SkinsRestorer
 main: skinsrestorer.bungee.SkinsRestorer
-version: 12.0 (Blackfire62's fork)
-author: Th3Tr0LLeR,Blackfire62
+version: 12.1 (Blackfire62's fork)
+author: Blackfire62,Th3Tr0LLeR
