--- a/plugin.yml
+++ b/plugin.yml
@@ -1,12 +1,11 @@
 name: SkinsRestorer
 main: skinsrestorer.bukkit.SkinsRestorer
-version: 12.0 (Blackfire62's fork)
-author: Th3Tr0LLeR,Blackfire62
+version: 12.1 (Blackfire62's fork)
+author: Blackfire62,Th3Tr0LLeR
 load: STARTUP
-softdepend: [AutoIn]
 commands:
   skinsrestorer:
     aliases: [sr]
-    description: SkinsRestorer's main command.
+    description: Admin commands.
   skin:
-    description: Use this command to change your skin.
+    description: Sets your skin.
