--- a/bungee.yml
+++ b/bungee.yml
@@ -1,4 +1,4 @@
 name: SkinsRestorer
 main: skinsrestorer.bungee.SkinsRestorer
-version: 12.3 (Blackfire62's fork)
+version: 12.3
 author: Blackfire62,Th3Tr0LLeR
