Fixed org.bukkit not found in bungee. + Added updater. #136 #137 #140

--- a/config.yml
+++ b/config.yml
@@ -51,3 +51,7 @@ MySQL:
   PlayerTable: Players
   Username: root
   Password: pass
+  
+Updater:
+  Enabled: true
+#Enable or disable the updater check on enable.
