--- a/bungee.yml
+++ b/bungee.yml
@@ -1,4 +1,4 @@
 name: SkinsRestorer
 main: skinsrestorer.bungee.SkinsRestorer
-version: 12.5.5-BETA
+version: 12.5.6
 author: Blackfire62,Th3Tr0LLeR
