--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: SkinsRestorer
 main: skinsrestorer.bukkit.SkinsRestorer
-version: 12.5.5-BETA
+version: 12.5.6
 author: Blackfire62,Th3Tr0LLeR
 commands:
   skinsrestorer:
