Some offline checks to prevent duplications #143 and remove some useless.

--- a/bungee.yml
+++ b/bungee.yml
@@ -1,4 +1,4 @@
 name: SkinsRestorer
 main: skinsrestorer.bungee.SkinsRestorer
-version: 12.5.8
+version: 12.5.9-BETA
 author: Blackfire62,Th3Tr0LLeR
