--- a/bungee.yml
+++ b/bungee.yml
@@ -1,4 +1,4 @@
 name: SkinsRestorer
 main: skinsrestorer.bungee.SkinsRestorer
-version: 12.6.1
+version: 12.7-SNAPSHOT
 author: Blackfire62,Th3Tr0LLeR
