Menu improvements + fixes.

--- a/bungee.yml
+++ b/bungee.yml
@@ -1,4 +1,4 @@
 name: SkinsRestorer
 main: skinsrestorer.bungee.SkinsRestorer
-version: 12.7-SNAPSHOT
+version: 12.7-SNAPSHOT-3
 author: Blackfire62,Th3Tr0LLeR
