--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: SkinsRestorer
 main: skinsrestorer.bukkit.SkinsRestorer
-version: 12.7-SNAPSHOT-3
+version: 12.8
 author: Blackfire62,Th3Tr0LLeR
 commands:
   skinsrestorer:
