Skull Crash Fix episode one
There is your fix for client crashes caused by broken skulls which are
caused by shitty skull plugins.

TO ENABLE, SET "CrashSkullFix" IN YOUR CONFIG TO TRUE !

First beta release, should only work for 1.8+ servers because I cant be
bothered researching packet structures of previous versions. Tested on
1.10 , works on both BungeeMode and regular mode, so all you need to do
is just update all SkinsRestorers and your network will be p much skull
crash safe!

It does not fix the broken skulls just yet, it just prevents players
from receiving blank properties about the skull and crashing their game.
You can tell a skull is broken if it becomes grey, like skeleton like
grey but without the face.

--- a/config.yml
+++ b/config.yml
@@ -54,3 +54,6 @@ MySQL:
 Updater:
   Enabled: true
 #Enable or disable the updater check on enable.
+
+CrashSkullFix: false
+#Should SR attempt to prevent client crashes caused by broken skulls ?
