Fixed incompatibilty & adjustments
- Fixed ProtocolLib incompatibility (dont use it pls)
- Adjustments for commands and code optimizations

STABLE Build, nothing happened in my testing, except for the fact it
works fine. Now what?

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,8 @@
 name: SkinsRestorer
 main: skinsrestorer.bukkit.SkinsRestorer
 load: STARTUP
-version: 12.9.1-BETA
-author: Blackfire62,Th3Tr0LLeR
+version: 12.9.3
+authors: [Blackfire62, Th3Tr0LLeR]
 commands:
   skinsrestorer:
     aliases: [sr]
