--- a/bungee.yml
+++ b/bungee.yml
@@ -1,4 +1,4 @@
 name: SkinsRestorer
 main: skinsrestorer.bungee.SkinsRestorer
-version: 12.9.1-BETA
-author: Blackfire62,Th3Tr0LLeR
+version: 12.9.3
+author: Blackfire62, Th3Tr0LLeR
