Fixing bugs and formatting code. (clean up)

--- a/bungee.yml
+++ b/bungee.yml
@@ -1,4 +1,4 @@
 name: SkinsRestorer
 main: skinsrestorer.bungee.SkinsRestorer
-version: 13.0.0
-author: Blackfire62, Th3Tr0LLeR
+version: 13.0.1
+author: Th3Tr0LLeR
