--- a/config.yml
+++ b/config.yml
@@ -28,6 +28,7 @@ DefaultSkins:
 #Disable skin names
 #Put skins you want to disable on the list
 #Player wont be able to set these skins
+#[skinsrestorer.bypassdisabled bypasses this]
 DisabledSkins:
   Enabled: false
   Names:
