--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,6 @@
     	<artifactId>guice</artifactId>
     	<version>4.1.0</version>
 	</dependency>
-	
   </dependencies>
   <build>
   <plugins>
@@ -134,6 +133,11 @@
           </goals>
         </execution>
       </executions>
+    </plugin>
+    <plugin>
+      <groupId>org.eluder.coveralls</groupId>
+      <artifactId>coveralls-maven-plugin</artifactId>
+      <version>4.3.0</version>
     </plugin>
   </plugins>
 </build>
