--- a/pom.xml
+++ b/pom.xml
@@ -1,135 +1,135 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com</groupId>
-  <artifactId>skinsrestorer</artifactId>
-  <version>13.2-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <groupId>com</groupId>
+    <artifactId>skinsrestorer</artifactId>
+    <version>13.2-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-  <name>skinsrestorer</name>
-  <url>http://maven.apache.org</url>
+    <name>skinsrestorer</name>
+    <url>http://maven.apache.org</url>
 
-  <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
-  <repositories>
-    <repository>
-        <id>spigot-repo</id>
-        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-    </repository>
-    <repository>
-        <id>onarandombox</id>
-        <url>http://repo.onarandombox.com/content/groups/public</url>
-    </repository>
-    <repository>
-    	<id>sponge-repo</id>
-        <url>http://repo.spongepowered.org/Sponge/maven/</url>
-   </repository>
-   <repository>
-        <id>bungeecord-repo</id>
-        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-   </repository>
-   <repository>
-   		<id>luck-repo</id>
-   		<url>https://ci.lucko.me/plugin/repository/everything</url>
-   </repository>
-   <repository>
-   		<id>minecraft-repo</id>
-   		<url>https://repo.prok.pw</url>
-   </repository>
-   <repository>
-  		<id>bstats-repo</id>
-  		<url>http://repo.bstats.org/content/repositories/releases/</url>
-   </repository>
-  </repositories>
-  <dependencies>
-    <dependency>
-      	<groupId>junit</groupId>
-      	<artifactId>junit</artifactId>
-      	<version>3.8.1</version>
-      	<scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>org.spigotmc</groupId>
-    	<artifactId>spigot-api</artifactId>
-    	<version>1.12.2-R0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-    	<groupId>com.onarandombox.multiversecore</groupId>
-		<artifactId>Multiverse-Core</artifactId>
-		<version>2.5.1</version>
-	</dependency>
-	<dependency>
-        <groupId>org.spongepowered</groupId>
-        <artifactId>spongeapi</artifactId>
-        <version>LATEST</version>
-    </dependency>
-    <dependency>
-        <groupId>net.md-5</groupId>
-        <artifactId>bungeecord-api</artifactId>
-        <version>1.12-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-        <groupId>net.md-5</groupId>
-        <artifactId>bungeecord-proxy</artifactId>
-        <version>1.12-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-        <groupId>com.mojang</groupId>
-        <artifactId>authlib</artifactId>
-        <version>1.5.21</version>
-    </dependency>
-    <dependency>
-  		<groupId>org.bstats</groupId>
-  		<artifactId>bstats-bukkit</artifactId>
-  		<version>1.2</version>
-	</dependency>
-	    <dependency>
-  		<groupId>org.bstats</groupId>
-  		<artifactId>bstats-bungeecord</artifactId>
-  		<version>1.2</version>
-	</dependency>
-	    <dependency>
-  		<groupId>org.bstats</groupId>
-  		<artifactId>bstats-sponge</artifactId>
-  		<version>1.2</version>
-	</dependency>
-	<dependency>
-    	<groupId>com.google.inject</groupId>
-    	<artifactId>guice</artifactId>
-    	<version>4.1.0</version>
-	</dependency>
-  </dependencies>
-  <build>
-  <plugins>
-    <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-shade-plugin</artifactId>
-      <version>2.4</version>
-      <configuration>
-        <artifactSet>
-          <includes>
-            <include>org.bstats:*</include>
-          </includes>
-        </artifactSet>
-        <relocations>
-          <relocation>
-            <pattern>org.bstats</pattern>
-            <shadedPattern>skinsrestorer</shadedPattern>
-          </relocation>
-        </relocations>
-      </configuration>
-      <executions>
-        <execution>
-          <phase>package</phase>
-          <goals>
-            <goal>shade</goal>
-          </goals>
-        </execution>
-      </executions>
-    </plugin>
-  </plugins>
-</build>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+    <repositories>
+        <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+        <repository>
+            <id>onarandombox</id>
+            <url>http://repo.onarandombox.com/content/groups/public</url>
+        </repository>
+        <repository>
+            <id>sponge-repo</id>
+            <url>http://repo.spongepowered.org/Sponge/maven/</url>
+        </repository>
+        <repository>
+            <id>bungeecord-repo</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </repository>
+        <repository>
+            <id>luck-repo</id>
+            <url>https://ci.lucko.me/plugin/repository/everything</url>
+        </repository>
+        <repository>
+            <id>minecraft-repo</id>
+            <url>https://repo.prok.pw</url>
+        </repository>
+        <repository>
+            <id>bstats-repo</id>
+            <url>http://repo.bstats.org/content/repositories/releases/</url>
+        </repository>
+    </repositories>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.12.2-R0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.onarandombox.multiversecore</groupId>
+            <artifactId>Multiverse-Core</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.spongepowered</groupId>
+            <artifactId>spongeapi</artifactId>
+            <version>LATEST</version>
+        </dependency>
+        <dependency>
+            <groupId>net.md-5</groupId>
+            <artifactId>bungeecord-api</artifactId>
+            <version>1.12-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>net.md-5</groupId>
+            <artifactId>bungeecord-proxy</artifactId>
+            <version>1.12-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mojang</groupId>
+            <artifactId>authlib</artifactId>
+            <version>1.5.21</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-bukkit</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-bungeecord</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-sponge</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <artifactSet>
+                        <includes>
+                            <include>org.bstats:*</include>
+                        </includes>
+                    </artifactSet>
+                    <relocations>
+                        <relocation>
+                            <pattern>org.bstats</pattern>
+                            <shadedPattern>skinsrestorer</shadedPattern>
+                        </relocation>
+                    </relocations>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
