Make the automatic updater work I had to include the whole package in the plugin, because we are suffixing it as -BETA instead of -SNAPSHOT Maybe we should change that in the future

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: SkinsRestorer
 main: skinsrestorer.bukkit.SkinsRestorer
-version: ${project.version}
+version: 13.2-SNAPSHOT
 description: Ability to restore/change skins on servers! (Offline and Online Mode). (Bungee/Bukkit/Sponge)
 authors: [Th3Tr0LLeR]
 softdepend: [Multiverse-Core]
