--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,10 @@ target/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# IDEA weirdness
+# IDE weirdness
 dependency-reduced-pom.xml
 .idea/
 skinsrestorer.iml
+.classpath
+.settings/
+.project
