--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,10 @@
     <version>13.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>skinsrestorer</name>
-    <url>http://maven.apache.org</url>
-
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <repositories>
         <repository>
