Re-add /skin set + replace deprecated methods+more
Re-added '/skin set' since now '/skin clear' exists, I thought it would be more consistent (and what if I want to have the skin from the player called "clear"?). Replaced deprecated sendMessage(string) methods from Bungee with sendMessage(new TextComponent(string)). Changed one character on Locale.java. Maybe something else I don't remember.

--- a/src/main/resources/bungee.yml
+++ b/src/main/resources/bungee.yml
@@ -1,4 +1,4 @@
 name: SkinsRestorer
 main: skinsrestorer.bungee.SkinsRestorer
-version: ${project.version}
+version: 13.2-SNAPSHOT
 author: Th3Tr0LLeR
