--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
         	<artifactId>bukkit</artifactId>
         	<version>1.4.0</version>
     	</dependency>
+        <dependency>
+            <groupId>io.sentry</groupId>
+            <artifactId>sentry</artifactId>
+            <version>1.6.3</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
