--- a/pom.xml
+++ b/pom.xml
@@ -14,66 +14,101 @@
     </properties>
     <repositories>
         <repository>
+        	<!-- SpigotMC Repository (for Bukkit API) -->
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
         <repository>
+        	<!-- Multiverse-Core Repository -->
             <id>onarandombox</id>
             <url>http://repo.onarandombox.com/content/groups/public</url>
         </repository>
         <repository>
+        	<!-- BungeeCord Repository -->
             <id>bungeecord-repo</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </repository>
         <repository>
+        	<!-- Lucko's Repository (needed for BungeeCord-Proxy) -->
             <id>luck-repo</id>
             <url>https://ci.lucko.me/plugin/repository/everything</url>
-        </repository>
+		</repository>
         <repository>
+        	<!-- KCauldron's Repository (needed for Mojang AuthLib) -->
             <id>minecraft-repo</id>
             <url>https://repo.prok.pw</url>
         </repository>
         <repository>
+        	<!-- bStats Repository (needed for Metrics) -->
             <id>bstats-repo</id>
             <url>http://repo.bstats.org/content/repositories/releases/</url>
+        </repository>
+        <repository>
+        	<!-- InventiveTalent's Repository (needed for Spiget-Update) -->
+            <id>inventive-repo</id>
+            <url>https://repo.inventivetalent.org/content/groups/public/</url>
+        </repository>
+        <repository>
+        	<!-- Mikeprimm's Repository (needed for Spigot 1.7.10-1.8.x Protocol Hack compatibility) -->
+        	<id>mikeprimm-repo</id>
+        	<url>http://repo.mikeprimm.com</url>
         </repository>
     </repositories>
     <dependencies>
         <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
+        	<!-- Bukkit API -->
+            <groupId>org.bukkit</groupId>
+            <artifactId>bukkit</artifactId>
             <version>1.12.2-R0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
+        	<!-- Multiverse-Core (compatibility reasons) -->
             <groupId>com.onarandombox.multiversecore</groupId>
             <artifactId>Multiverse-Core</artifactId>
             <version>2.5.1</version>
         </dependency>
         <dependency>
+        	<!-- BungeeCord API -->
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-api</artifactId>
             <version>1.12-SNAPSHOT</version>
         </dependency>
         <dependency>
+        	<!-- BungeeCord-Proxy (needed for BungeeCord) -->
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-proxy</artifactId>
             <version>1.12-SNAPSHOT</version>
         </dependency>
         <dependency>
+        	<!-- Mojang AuthLib (needed for SkinsGUI) -->
             <groupId>com.mojang</groupId>
             <artifactId>authlib</artifactId>
             <version>1.5.21</version>
         </dependency>
         <dependency>
+        	<!-- bStats Lite (Metrics) for Bukkit -->
             <groupId>org.bstats</groupId>
-            <artifactId>bstats-bukkit</artifactId>
+            <artifactId>bstats-bukkit-lite</artifactId>
             <version>1.2</version>
         </dependency>
         <dependency>
+            <!-- bStats Lite (Metrics) for BungeeCord -->
             <groupId>org.bstats</groupId>
-            <artifactId>bstats-bungeecord</artifactId>
+            <artifactId>bstats-bungeecord-lite</artifactId>
             <version>1.2</version>
         </dependency>
+        <dependency>
+        	<!-- Spiget-Update (for the updater) -->
+        	<groupId>org.inventivetalent.spiget-update</groupId>
+        	<artifactId>bukkit</artifactId>
+        	<version>1.4.0</version>
+    	</dependency>
+    	<dependency>
+    		<!-- Spigot 1.7.10-1.8.x Protocol Hack (for compatibility) -->
+    		<groupId>org.spigotmc</groupId>
+    		<artifactId>spigot</artifactId>
+    		<version>1.7.10-R0.1-SNAPSHOT</version>
+    	</dependency>
     </dependencies>
     <build>
         <plugins>
@@ -90,7 +125,7 @@
                     <relocations>
                         <relocation>
                             <pattern>org.bstats</pattern>
-                            <shadedPattern>skinsrestorer</shadedPattern>
+                            <shadedPattern>skinsrestorer.bStatsMetrics</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
