--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: SkinsRestorer
 main: skinsrestorer.bukkit.SkinsRestorer
-version: 13.2-SNAPSHOT
-description: Ability to restore/change skins on servers! (Offline and Online Mode). (Bungee/Bukkit/Sponge)
+version: ${project.version}
+description: Ability to restore/change skins on servers!
 authors: [Th3Tr0LLeR]
 softdepend: [Multiverse-Core]
 commands:
@@ -15,5 +15,11 @@ commands:
 permissions:
    skinsrestorer.playercmds:
      description: Allows access to all main commands.
+   skinsrestorer.playercmds.menu:
+     description: Allows access to the /skins menu
    skinsrestorer.cmds:
      description: Allows access to administrative commands.
+   skinsrestorer.bypassdisabled:
+     description: Allows access to disabled skins.
+   skinsrestorer.bypasscooldown:
+     description: Bypasses the skin change cooldown (if any).
